Updates to the FFT benchmarks to include parallel 3D convolutions